# filesentry

./: .gitignore  CMakeLists.txt
include/filesentry/: FileWatcher.h  FileWatcherImpl.h  FileWatcherWin32.h
source/: FileWatcher.cpp  FileWatcherWin32.cpp
